# strusTrace

./: .gitignore  CHANGELOG  CMakeLists.txt  INSTALL  INSTALL.3rdParty  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.OpenBSD  INSTALL.Ubuntu.md  README
.Attic/: utils.hpp
doc/: doxygen.conf
doc/doxygen/html/: annotated.html  classes.html  classstrus_1_1TraceIdMapInterface-members.html  classstrus_1_1TraceIdMapInterface.html  classstrus_1_1TraceLoggerInterface-members.html  classstrus_1_1TraceLoggerInterface.html  classstrus_1_1TraceObjectBuilderInterface-members.html  classstrus_1_1TraceObjectBuilderInterface.html  classstrus_1_1TraceProcessorInterface-members.html  classstrus_1_1TraceProcessorInterface.html  classstrus_1_1TraceQuery-members.html  classstrus_1_1TraceQuery.html  classstrus_1_1TraceRecord-members.html  classstrus_1_1TraceRecord.html  classstrus_1_1TraceViewerInterface-members.html  classstrus_1_1TraceViewerInterface.html  dir_4c7fe52541d540b59710786f705b50e0.html  dir_a73361def35442ed7e38ef668dbae29f.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  index.hhc  index.hhk  index.hhp  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespacestrus.html  structstrus_1_1TraceElement-members.html  structstrus_1_1TraceElement.html  strus_8md.html  (+26 more)
doc/doxygen_include/: strus.md
include/strus/: traceAnalyzerCallInterface.hpp  traceElement.hpp  traceIdMapInterface.hpp  traceLoggerInterface.hpp  traceObjectBuilderInterface.hpp  traceProcessorInterface.hpp  traceQuery.hpp  traceRecord.hpp  traceStorageCallInterface.hpp  traceViewerInterface.hpp  versionShadow.hpp.in  versionTrace.hpp  versionTrace.hpp.in
include/strus/lib/: tracelog.hpp  traceobj.hpp  traceproc_std.hpp
scripts/: genInterface.pl  genInterface.sh
src/: CMakeLists.txt  deserialize.cpp  deserialize.hpp  enumIdentifiers.hpp  errorUtils.hpp  internationalization.cpp  internationalization.cpp.in  libstrus_tracelog.cpp  libstrus_traceobj.cpp  libstrus_traceproc_std.cpp  logUtils.cpp  logUtils.hpp  objectIds_gen.cpp  objectIds_gen.hpp  objects_gen.cpp  objects_gen.hpp  serialize.cpp  serialize.hpp  shadowObject.hpp  shadowObjectMap.hpp  traceGlobalContext.hpp  traceIdMap.cpp  traceIdMap.hpp  traceIdMap_gen.cpp  traceLogger.cpp  traceLogger.hpp  traceLogger_breakpoint.cpp  traceLogger_breakpoint.hpp  traceLogger_count.cpp  traceLogger_count.hpp  traceLogger_dump.cpp  traceLogger_dump.hpp  traceLogger_json.cpp  traceLogger_json.hpp  traceLogger_memory.cpp  traceLogger_memory.hpp  traceLogger_textfile.cpp  traceLogger_textfile.hpp  traceObject.cpp  traceObject.hpp  (+13 more)
src/parser/: CMakeLists.txt  fillTypeTables.cpp  fillTypeTables.hpp  interfaceParser.cpp  interfaceParser.hpp  interfaceParser_fillRuleTables.cpp  interfaceParser_fillTypeTables.cpp  printFrame.cpp  printFrame.hpp  strusTraceCodeGen.cpp
tests/: CMakeLists.txt
tests/queryeval/: CMakeLists.txt  res.cnt  res.json  res.txt
tests/queryeval/src/: CMakeLists.txt  analyzerObjectBuilder.hpp  storageObjectBuilder.hpp  testQueryEval.cpp
